Add new news post

--- a/community/jobs/index.html
+++ b/community/jobs/index.html
@@ -20,8 +20,7 @@ sitemap: community/Jobs
                 This opportunity will involve: developing and applying methods in computational biology and artificial intelligence to gather information about gene function in the legume family; using the results to identify gene correspondences at several taxonomic levels. 
                 The participant will learn and apply methods in computational biology, genetics, and artificial intelligence, including statistical methods of marker-trait association, methods for determining syntenic relationships and for calculating and representing pan-genome relationships, methods for inferring gene families, and methods for inferring evolutionary events from large collections of gene families.
                 <b>This opportunity is available to U.S. citizens only.</b>
-                A more detailed position description and required qualifications can be found here
-                <a href="https://www.zintellect.com/Opportunity/Details/USDA-ARS-MWA-2026-0012" target="_blank"><b>here</b></a>. 
+                <br>A more detailed position description and required qualifications can be found <a href="https://www.zintellect.com/Opportunity/Details/USDA-ARS-MWA-2026-0012" target="_blank"><b>here</b></a>. 
                 <br><br>
                 The application must contain: 
                 <ul class="uk-list uk-list-decimal">
