--- a/community/sbw/registration.html
+++ b/community/sbw/registration.html
@@ -18,6 +18,8 @@ sitemap: community/sbw
 </div>
 
 <p><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2026/SBW_2026_DRAFT_2026.01.15.pdf" target="_blank">SBW 2026 DRAFT Agenda</a></p>
+<p><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2026/SBW2026_Technician_DRAFT_Agenda_2026-01-23.pdf" target="_blank">Technician DRAFT Agenda</a></p>
+
 <p>
 <a class="uk-button uk-button-danger uk-border-rounded" href="https://www.eventbrite.com/e/2026-soybean-breeders-workshop-tickets-1972901659974" target="_blank">Register for Workshop</a>
 </p>
