Small updates / changes (#273)

--- a/community/jobs/index.html
+++ b/community/jobs/index.html
@@ -3,8 +3,7 @@ title:  Jobs
 layout: default
 sitemap: community/Jobs
 ---
-<h2>Jobs</h2>
-<p> If you have a soybean-related job to announce, please contact <a href= "/about/#contact" target="_blank">SoyBase</a> to get it posted. <p>
+<h1>Soybean Community Jobs</h1>
 <h1 class="uk-heading-divider uk-margin-remove-top"></h1>
 
 <div class="uk-margin-remove uk-grid-collapse uk-flex-center" uk-grid>
@@ -12,24 +11,27 @@ sitemap: community/Jobs
     <div class="uk-width-3-4@m">
         <div class="uk-margin-large-bottom uk-card uk-card-default">
             <div class="uk-card-header uk-text-bold uk-card-primary"> 
-                Assistant Professor of Soybean Breeder & Genetics<br>
-                University of Tennessee, Knoxville, Tennessee
+                USDA-ARS Computational Plant Biology Fellowship<br>
+                USDA-ARS, Ames, Iowa
             </div>
             <div class="uk-card-body"> 
-                The University of Tennessee in Knoxville, Tennessee is seeking applications for the position of Assistant Professor of Soybean Breeder and Genetics.
-                This is a 9-month tenure track position with 75% Research and 25% teaching. 
-                Download a PDF version of the position annoucement with a more detailed position description and required qualifications 
-                <a href="https://data.soybase.org/annex/Glycine/max/documents/2025_06_24_Soybean_Breeder_Geneticist.pdf" target="_blank"><b>here</b></a>. 
+                A research opportunity is currently available with the U.S. Department of Agriculture (USDA), Agricultural Research Service (ARS), located in Ames, Iowa.
+                This project will use a combination of analyses utilizing gene families, synteny relationships, genetic association results, and published gene functional information, to catalog and evaluate the genes involved in domestication in crops within the legume plant family. 
+                This opportunity will involve: developing and applying methods in computational biology and artificial intelligence to gather information about gene function in the legume family; using the results to identify gene correspondences at several taxonomic levels. 
+                The participant will learn and apply methods in computational biology, genetics, and artificial intelligence, including statistical methods of marker-trait association, methods for determining syntenic relationships and for calculating and representing pan-genome relationships, methods for inferring gene families, and methods for inferring evolutionary events from large collections of gene families.
+                <b>This opportunity is available to U.S. citizens only.</b>
+                <br>A more detailed position description and required qualifications can be found <a href="https://www.zintellect.com/Opportunity/Details/USDA-ARS-MWA-2026-0012" target="_blank"><b>here</b></a>. 
                 <br><br>
                 The application must contain: 
                 <ul class="uk-list uk-list-decimal">
-                    <li>Curriculum Vitae</li>
-                    <li>Letter of interest detailing research and teaching philosophy</li>
-                    <li>Names, addresses, telephone numbers and email addresses of <b>four</b> professional references that the Search Committee may contact</li>
-                    <li>Official transcripts or diploma showing degrees(s) conferred</li>
+                    <li>An application available on Zintellect</li>
+                    <li>A current resume/CV, including academic history, employment history, relevant experiences, and publication list</li>
+                    <li>Transcript(s)</li>
+                    <li>Two educational or professional recommendations</li>
                 </ul>
             </div>
 
         </div>
     </div>
 </div>
+<p> If you have a soybean-related job to announce, please contact <a href= "/about/#contact" target="_blank">SoyBase</a> to get it posted. </p>
