--- a/community/sbw/SBW/SBW_2025.html
+++ b/community/sbw/SBW/SBW_2025.html
@@ -24,7 +24,7 @@ sitemap: community/sbw
       <tr><th colspan='2'>SESSION 1: Resources and Breeding Innovations | Chair: Aaron Lorenz, Univ. of Minnesota</th></tr>
       <tr><td>Rex Nelson, SoyBase, USDA-ARS</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Rex_Nelson.pdf" target="_blank">New look, New Functionality</a></td></tr>
       <tr><td>Jianxin Ma, Purdue Univ.</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Jianxin_Ma.pdf" target="_blank">SoyRenSeq: An approach for disease resistance gene discovery and application</a></td></tr>
-      <tr><td>Geeta Menon, BASF</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Geeta_Menon.pdf" target="_blank">BASF soybean seeds and traits</a></td></tr>
+      <tr><td>Geeta Menon, BASF</td><td>BASF soybean seeds and traits</td></tr>
       <tr><td>Cory Hirsch, Univ. of Minnesota</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Cory_Hirsch.pdf" target="_blank">Leveraging large-scale data and machine learning to understand plant responses to abiotic and biotic stress</a></td></tr>
       <tr><td>Mark Miller, United Soybean Board</td><td><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2025/SBW2025_Mark_Miller.pdf" target="_blank">Current state and focus of USB research funding</a></td></tr>
       <tr><td colspan='2'>Coffee Break</td></tr>
