--- a/community/sbw/index.html
+++ b/community/sbw/index.html
@@ -10,17 +10,16 @@ sitemap: community/sbw
 
 			<div class="uk-card uk-card-default uk-margin">
 				<div class="uk-card-header uk-text-bold uk-card-primary uk-padding-small">
-					<h3 >2026 Soybean Breeders' Workshop (SBW2026)</h3>
+					<h3 >2027 Soybean Breeders' Workshop (SBW2027)</h3>
 				</div>
 				<div class="uk-padding">
 					<p>
-						<b>When:</b>February 16-18, 2026<br />
-						<b>Theme:</b>Abiotic Stress<br/>
+						<b>When:</b> <br />
+						<b>Theme:</b>TBD<br/>
 						<b>Where:</b>Hilton St. Louis Frontenac in St. Louis, Missouri
 					</p>		
-						<h4 class="uk-margin-remove-bottom"><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2026/SBW_2026_DRAFT_2026.01.15.pdf" target="_blank">SBW 2026 DRAFT Agenda</a></h4>
-						<h4 class="uk-margin-remove-bottom"><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2026/SBW2026_Technician_DRAFT_Agenda_2026-01-23.pdf" target="_blank">SBW 2026 Technician DRAFT Agenda</a></h4>						
-						<h4 class="uk-margin-remove-bottom"><a href="./registration.html">2026 Soybean Breeder's Workshop Information and registration page</a></h4>
+					
+					<!--	<h4 class="uk-margin-remove-bottom"><a href="./registration.html">2026 Soybean Breeder's Workshop Information and registration page</a></h4> -->
 			
 				</div>
 			</div>
@@ -60,6 +59,7 @@ sitemap: community/sbw
 					<div uk-grid>
 						<a href= "./SBW/posters2024.html">2024</a>
 						<a href= "./SBW/posters2025.html">2025</a>
+						<p>2026</p>	
 					</div>
 				</div>
 			
