--- a/community/sbw/registration.html
+++ b/community/sbw/registration.html
@@ -7,18 +7,17 @@ sitemap: community/sbw
 
 <div class="uk-panel">
   <img class="uk-align-right uk-margin-remove-adjacent" src="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/img/SBW_logo.png" width="300" height="175" alt="Soybean Breeder Workshop Logo">
-  <h5 class="uk-heading-small uk-margin-remove-vertical">2026 Soybean Breeders Workshop</h5>
-  <h6 class="uk-heading-small uk-margin-remove-top">Abiotic Stress</h6>
+  <h5 class="uk-heading-small uk-margin-remove-vertical">2027 Soybean Breeders Workshop</h5>
+  <h6 class="uk-heading-small uk-margin-remove-top">TBD</h6>
   <br> 
 
 
-  <p class="uk-margin-remove-vertical">February 16 - 18, 2026</p>
+  <p class="uk-margin-remove-vertical">TBD</p>
   <p class="uk-margin-remove-vertical">Hilton St. Louis Frontenac</p>
   <p class="uk-margin-remove-vertical">1335 S Lindbergh Blvd, St. Louis, MO 63131</p>
 </div>
 
-<p><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2026/SBW_2026_DRAFT_2026.01.15.pdf" target="_blank">SBW 2026 DRAFT Agenda</a></p>
-<p><a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2026/SBW2026_Technician_DRAFT_Agenda_2026-01-23.pdf" target="_blank">Technician DRAFT Agenda</a></p>
+<!--
 
 <p>
 <a class="uk-button uk-button-danger uk-border-rounded" href="https://www.eventbrite.com/e/2026-soybean-breeders-workshop-tickets-1972901659974" target="_blank">Register for Workshop</a>
@@ -26,9 +25,7 @@ sitemap: community/sbw
 <p>
 <a class="uk-button uk-button-primary uk-border-rounded" <a href="https://www.hilton.com/en/attend-my-event/stlfhhf-94j-3f858198-d595-4f67-9006-33f026226671/" target="_blank">Hotel Room Link</a>
 </p>
-<!-- 
-<p class="uk-text-lead uk-text-danger">Please make reservations by <b>01/26/2026</b>, to ensure group discount. Your room reservations will help offset the costs of the meeting rooms throughout the conference and to keep the registration cost down.</p>
--->
+
 <h1 class="uk-heading-divider uk-margin-remove-vertical"></h1>
 
 <h4 class="uk-background-primary uk-padding-small uk-light uk-text-bold uk-border-rounded">Registration Fees</h4>
@@ -227,3 +224,4 @@ Your room reservations will help offset the costs of the meeting rooms throughou
   }
     
 </script>
+-->
