--- a/community/sbw/SBW/posters2026.html
+++ b/community/sbw/SBW/posters2026.html
@@ -10,10 +10,11 @@ sitemap: community/sbw
     <div class="uk-width-1-2@m">
         <div class="uk-margin-large-bottom uk-card uk-card-default">
             <div class="uk-card-media-top">
-                <img src="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2024/SBW2024_Poster_Winners.jpg"  alt="2026 James Specht Poster Competition Winners">
+                <img src="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2026/SBW_2026_Poster_Session_Winners.jpg"  alt="2026 James Specht Poster Competition Winners">
             </div>
             <div class="uk-card-footer">
-                <p>Left to Right: Kieth Rincker (Committee Member), Kelsey Boucher, Mary Jane Espina, Forrest Hanson, Cleiton Wartha (Committee Member)</p>
+                <p>Left to Right: Joscif Raigne, Emanuel Ferrari do Nascimento, Ben Hall (Committee Member), Sawyer Goodwin, Brent Brower-Toland (Committee Member)</p>
+                    
             </div>
         </div>
     </div>
