--- a/community/sbw/index.html
+++ b/community/sbw/index.html
@@ -59,7 +59,7 @@ sitemap: community/sbw
 					<div uk-grid>
 						<a href= "./SBW/posters2024.html">2024</a>
 						<a href= "./SBW/posters2025.html">2025</a>
-						<p>2026</p>	
+						<a href= "./SBW/posters2026.html">2026</a>
 					</div>
 				</div>
 			
